csids wiretap heuristic overriding mp2t
This issue was migrated from bug 8689 in our old bug tracker.
Original bug information:
Reporter: Weston Schmidt
Status: RESOLVED FIXED
Product: Wireshark
Component: Capture file support (libwiretap)
OS: All
Platform: x86
Version: Git
Attachments:
fail.ts: mpeg ts file that shows the problem
mp2t-wiretap.patch: This patch file fixes the problem I'm seeing with the fail.ts file.