From Weston Schmidt via https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=8689: csids wiretap heuristic overriding mp2t

svn path=/trunk/; revision=49334